<resources>
    <string name="app_name">Bing美图</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="download_all">下载全部</string>
    <string name="no_resources">没有图片啦ฅ՞•ﻌ•՞ฅ！</string>
    <string name="no_net_tapme">没网啦，点我ฅ՞•ﻌ•՞ฅ点我</string>
    <string name="image_loading">正在加载… ฅ•̀∀•́ฅ</string>
    <string name="no_net_refresh">没有网络，下拉刷新 ฅ՞•ﻌ•՞ฅ</string>
    <string name="no_net">网卡爆了(｡•ˇ‸ˇ•｡)</string>
    <string name="parse_json_error">json解析失败</string>
    <string name="no_response_body">无请求体(｡•ˇ‸ˇ•｡)</string>
    <string name="gallery">图库</string>
    <string name="other">其他</string>
    <string name="donate">捐赠</string>
    <string name="share_app">分享此软件</string>
    <string name="my_email">1132412166@qq.com</string>
    <string name="surplus_task_text">还剩%1$d张壁纸</string>
    <string name="begin_download">开始下载</string>
    <string name="downloading">正在下载</string>
    <string name="download_finish">下载完成</string>
    <string name="download_detail">已下载%1$d张壁纸,失败%2$d个</string>
    <string name="download_failed">下载失败</string>
    <string name="is_downloading">正在下载中..</string>
    <string name="grant_write_permission">请授予读写存储权限</string>
    <string name="cannot_create_dir">无法创建目录</string>
    <string name="clear_cache">清空缓存</string>
    <string name="back_again_exit">再按一次退出</string>

    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="share_app_to">分享此软件到</string>
    <string name="thanks_support">谢谢支持</string>
    <string name="no_alipay">无支付宝客户端</string>
    <string name="confirm_clear_cache">确认清空缓存？</string>
    <string name="yes">确认</string>
    <string name="cancel">取消</string>
    <string name="clear_successful">已清空</string>
    <string name="take_ali_failed">打开支付宝失败</string>
    <string name="title_activity_view_image2">ViewImageActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="file_already_exist">此图片已下载</string>
    <string name="author">farmer</string>
    <string name="text_about">关于</string>
    <string name="text_download">下载</string>
    <string name="text_back">返回</string>

    <string name="text_recent_image">最近</string>
    <string name="text_random_change_theme">随机换肤</string>
    <string name="check_update">检查更新</string>
    <string name="text_share">分享</string>
    <string name="text_delete">删除</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="delete_successful">删除成功</string>
    <string name="text_more">更多</string>
    <string name="text_set_wallpaper">设为壁纸</string>
    <string name="error_set_wallpaper">设置失败</string>
    <string name="set_successful">设置成功</string>
    <string name="ratio_1920x1080">1920x1080</string>
    <string name="ratio_1920x1200">1920x1200(有水印)</string>
    <string name="please_download">请先下载此壁纸</string>
    <string name="share_pic_to">分享图片到</string>

    <string name="setting">设置</string>

    <!-- Strings related to Settings -->


    <string name="text_update_frequency">更新频率</string>
    <string-array name="entries_frequency_of_update">
        <item>5 分钟</item>
        <item>20 分钟</item>
        <item>30 分钟</item>
        <item>1 小时</item>
        <item>2 小时</item>
        <item>5 小时</item>
        <item>6 小时</item>
    </string-array>
    <string name="general_setting">基本设置</string>
    <string name="alarm_wallpaper">定时壁纸</string>
    <string name="switch_alarm_wallpaper">总开关</string>
    <string name="wallpaper_refresh_interval">刷新间隔</string>
    <string name="set_wallpaper_mode">刷新模式</string>
    <string name="summary_set_wallpaper_mode">选择图片顺序</string>
    <string name="default_order_wallpaper">order</string>
    <string-array name="entries_order_wallpaper">
        <item>顺序</item>
        <item>随机</item>
    </string-array>
    <string-array name="entryValues_order_wallpaper">
        <item>order</item>
        <item>random</item>
    </string-array>
    <string name="default_quality_image">80</string>
    <string name="resolution_ratio">分辨率</string>
    <string name="summary_resolution_ration_wallpaper">播放壁纸的分辨率</string>
    <string-array name="default_resolution_ration_wallpaper">
        <item>1920x1080</item>
    </string-array>
    <string name="additional_setting">附加设置</string>
    <string name="auto_update">自动更新</string>
    <string name="summary_auto_update">每天00:00更新设置壁纸(可能有延迟)</string>
    <string name="text_version">版本</string>
    <string name="version_name">2.0.1</string>
    <string name="about_hint">提示</string>
    <string name="description_set_interval">动态设置壁纸时间间隔</string>
    <string name="text_only_wifi">仅WIFI</string>
    <string name="summary_only_wifi">仅在WIFI下更新</string>
    <string name="text_quality_image">图片质量</string>
    <string name="summary_quality_image">图片显示的质量</string>
    <string name="start_alarm">定时已开启</string>
    <string name="cancel_alarm">定时已取消</string>
    <string name="update_setting">设置已更新</string>
    <string name="atleast_one_rr">至少一种分辨率</string>
    <string name="help">·下载全部图片时，已下载的不会再下载  \n
        正常返回退出，定时可正常工作；


    </string>
    <string name="select_refresh_interval">选定刷新间隔</string>
    <string name="time_format_error">不要逗啦/./</string>
    <string-array name="entries_resolution_ratio_wallpaper">
        <item>1920x1200</item>
        <item>1920x1080</item>
    </string-array>
    <string-array name="entryValues_resolution_ratio_wallpaper">
        <item>1920x1200</item>
        <item>1920x1080</item>
    </string-array>
    <string-array name="entryValues_quality_image">
        <item>50</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    <string-array name="entries_quality_image">
        <item>50%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>


</resources>
