<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/gallery" />


    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/donate" />
            <item
                android:id="@+id/nav_clear"
                android:title="@string/clear_cache"
                android:icon="@drawable/broom_24px" />

        </menu>
    </item>

</menu>
