<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="cn.vove7.bingwallpaper.activities.ViewImageActivity">


    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/transparent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent">

                <ImageButton
                    android:id="@+id/view_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="20dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/text_back"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:theme="@style/RippleWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center">

                <!--<ImageButton-->
                <!--android:id="@+id/view_share"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:background="?android:attr/selectableItemBackgroundBorderless"-->
                <!--android:contentDescription="@string/text_share"-->
                <!--android:src="@drawable/ic_share_white_24dp"-->
                <!--android:theme="@style/RippleWhite" />-->
                <ImageButton
                    android:id="@+id/view_more"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/text_more"
                    android:src="@drawable/ic_more_vert_white_24dp"
                    android:theme="@style/RippleWhite" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center|bottom"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/view_download"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/text_download"
                android:src="@drawable/ic_file_download_white_24dp"
                android:theme="@style/RippleWhite" />

            <ImageButton
                android:id="@+id/view_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/text_delete"
                android:src="@drawable/ic_delete_white_24dp"
                android:theme="@style/RippleWhite" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
